24.05.2010
    - Fix regression at 06.04.2020: Can't connect Jack ports to audio input/output tracks R chan. (Tim)
      Don't check out of bounds index in AudioInput/Output::registerPorts(). When it is called by
       Audio::msgSetChannels(), the new number of channels has not been set yet.
23.05.2010
    * New - PianoRoll Speaker button has two selectable modes, single note and chords: (Tim)
16.05.2010
    - Popup menus: Changed the text '<More...>' in submenus, to the first item's text in the submenu. (Tim)
    - Oops, removed redundant addAction() in RoutePopupMenu::addMenuItem(), causing duplicate items
       at 'More...' menu breaks.
    - Fixed regression at 03.02.2020: Plugin dialog user 'categories' not showing LV2 plugins.
18.04.2010
    - New option in Global settings -> GUI tweaks to (not) keep transport window on top (kybos)
13.04.2020
    - Fix regression from 12.04.2019: Midi controller cache not proper after loading song. (Tim)
      Since we now resolve track and instrument references AFTER a song file is FULLY loaded,
       calling addPortCtrlEvents() on all tracks BEFORE doing the resolving had ill effect.
      Now port midi control cache events are added on all tracks AFTER the resolving.
    - Simplified several sections regarding adding/removing port midi control cache events.
    - Removed ALL 'old-style drum track' code. Track type NEW_DRUM has been renamed DRUM.
    - Simplified many drum controller (per-note) code sections to call a common function
       in MidiTrack::mappedPortChanCtrl()
    - Support midnam controllers (gmsynth.lv2 for example).
      This was very difficult. Midnam supports per-channel AND per-patch controller lists.
      Instead of adapting our own instrument and controller classes to NATIVELY support that,
       which would be NICE but much more difficult and time-consuming, the instrument simply
       'compounds' its own controller list and the midnam controller list together and